--- a/polyhack/templates/classes/class_detail.html
+++ b/polyhack/templates/classes/class_detail.html
@@ -76,6 +76,22 @@
                     <div>No lessons available for this class yet.</div>
                 </div>
             {% endif %}
+            {% if is_teacher %}
+            <h2>Exams</h2>
+            <form method="post" action="{% url 'classes:process_handwriting' pk=class.pk %}" enctype="multipart/form-data">
+                {% csrf_token %}
+                <input type="file" name="file" accept=".pdf,.jpg,.jpeg,.png">
+                <button type="submit" class="btn btn-primary">Grade it</button>
+            </form>
+            {% if error %}
+                <div class="alert alert-danger mt-3">{{ error }}</div>
+            {% endif %}
+            {% if grade_feedback %}
+                <div class="mt-3">
+                    {{ grade_feedback|safe }}
+                </div>
+            {% endif %}
+            {% endif %}
         </div>
     </div>
 </div>
